--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "Ryan's blog"
+  title: "Reducing variance"
   site-url: https://wesslen-blog.netlify.app
   repo-url: https://github.com/wesslen/quarto-blog
   open-graph: true
