--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install -r requirements-build.txt
     - name: Download Quarto Package
-      run: wget -O package.deb https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.450/quarto-1.3.450-linux-arm64.deb
+      run: wget -O package.deb https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.450/quarto-1.3.450-linux-amd64.deb
     - name: Install Quarto Package
       run: |
         sudo dpkg -i package.deb
