--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       run: |-
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
-        git add index.html
+        git add _site/
         timestamp=$(date -u)
         git commit -m "Latest data: ${timestamp}" || exit 0
         git push
