--- a/.github/workflows/summarize.yml
+++ b/.github/workflows/summarize.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install -r requirements-build.txt
         python -m pip install -r requirements-summarizer.txt
     - name: Run summarization
       run: |
