add environment to summarize action

--- a/.github/workflows/summarize.yml
+++ b/.github/workflows/summarize.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   scheduled:
     runs-on: ubuntu-latest
+    environment: summarize
     steps:
     - name: Check out this repo
       uses: actions/checkout@v2
