--- a/.github/workflows/summarize.yml
+++ b/.github/workflows/summarize.yml
@@ -32,7 +32,7 @@ jobs:
       run: |-
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
-        git add output.jsonl
+        git add data/output.jsonl
         timestamp=$(date -u)
         git commit -m "Latest data: ${timestamp}" || exit 0
         git push
