Update _quarto.yml add edit page actions

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ website:
   title: "Bayesian beagle"
   site-url: https://wesslen-blog.netlify.app
   repo-url: https://github.com/wesslen/quarto-blog
+  repo-actions: [edit]
   open-graph: true
   twitter-card:
     creator: "@ryanwesslen"
@@ -13,9 +14,6 @@ website:
     background: "#eeeeee"
     right:
       - about.qmd
-      - icon: twitter
-        aria-label: twitter
-        href: https://twitter.com/ryanwesslen
       - icon: github
         aria-label: github
         href: https://github.com/wesslen
