--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
         git add _site/
+        git add posts/
         timestamp=$(date -u)
         git commit -m "Latest data: ${timestamp}" || exit 0
         git push
