--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,8 +3,8 @@ repos:
     rev: v4.0.1  # Use the latest version
     hooks:
       - id: check-yaml
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
+#      - id: end-of-file-fixer
+#      - id: trailing-whitespace
 
   - repo: https://github.com/psf/black
     rev: 22.3.0  # Use the latest version
