Update _quarto.yml for bayesian-beagle

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,8 +3,8 @@ project:
 
 website:
   title: "Bayesian beagle"
-  site-url: https://wesslen-blog.netlify.app
-  repo-url: https://github.com/wesslen/quarto-blog
+  site-url: https://bayesian-beagle.netlify.app
+  repo-url: https://github.com/wesslen/bayesian-beagle
   repo-actions: [edit]
   open-graph: true
   twitter-card:
@@ -16,10 +16,10 @@ website:
       - about.qmd
       - icon: github
         aria-label: github
-        href: https://github.com/wesslen
-      - icon: person-circle
-        aria-label: website
-        href: https://wesslen.netlify.app
+        href: https://github.com/wesslen/bayesian-beagle
+#      - icon: person-circle
+#        aria-label: website
+#        href: https://wesslen.netlify.app
 
 format:
   html:
