--- a/.github/workflows/summarize.yml
+++ b/.github/workflows/summarize.yml
@@ -5,6 +5,12 @@ env:
 
 on:
   workflow_dispatch:
+    inputs:
+      force_generate_all:
+        description: 'Force generate summaries for all posts'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   scheduled:
@@ -27,7 +33,11 @@ jobs:
         python -m pip install -r requirements-summarizer.txt
     - name: Run summarization
       run: |
-        python scripts/summarizer.py data/input.jsonl
+        FORCE_FLAG=""
+        if [ ${{ github.event.inputs.force_generate_all }} = true ]; then
+          FORCE_FLAG="--force-generate-all"
+        fi
+        python scripts/summarizer.py data/input.jsonl $FORCE_FLAG
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
