Update build.yml set force generate posts as default

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
         description: 'Force generate all posts'
         required: false
         type: boolean
-        default: false
+        default: true
     
 jobs:
   scheduled:
