--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,13 +7,11 @@ website:
   repo-url: https://github.com/wesslen/bayesian-beagle
   repo-actions: [edit]
   open-graph: true
-  twitter-card:
-    creator: "@ryanwesslen"
-    card-style: summary_large_image
   navbar:
     background: "#eeeeee"
+    logo: bayesian-beagle.png
     right:
-      - about.qmd
+      - about: about.qmd
       - icon: github
         aria-label: github
         href: https://github.com/wesslen/bayesian-beagle
