--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,10 +8,9 @@ website:
   repo-actions: [edit]
   open-graph: true
   navbar:
-    background: "#eeeeee"
     logo: bayesian-beagle.png
     right:
-      - about: about.qmd
+      - about.qmd
       - icon: github
         aria-label: github
         href: https://github.com/wesslen/bayesian-beagle
