Update _quarto.yml for icon.jpg

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
   repo-actions: [edit]
   open-graph: true
   navbar:
-    logo: bayesian-beagle.png
+    logo: icon.jpg
     right:
       - about.qmd
       - icon: github
