--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,11 +7,8 @@ website:
   repo-url: https://github.com/wesslen/bayesian-beagle
   repo-actions: [edit]
   open-graph: true
-  twitter-card:
-    creator: "@ryanwesslen"
-    card-style: summary_large_image
   navbar:
-    background: "#eeeeee"
+    logo: icon.jpg
     right:
       - about.qmd
       - icon: github
