add description to _quarto.yml to enable rss feed creation

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ website:
   title: "Bayesian beagle"
   site-url: https://bayesian-beagle.netlify.app
   repo-url: https://github.com/wesslen/bayesian-beagle
+  description: "Quarto blog of LLM-generated summaries of Arxiv preprints"
   repo-actions: [edit]
   open-graph: true
   navbar:
