--- a/.github/workflows/summarize.yml
+++ b/.github/workflows/summarize.yml
@@ -11,6 +11,8 @@ on:
         required: false
         type: boolean
         default: false
+  schedule:
+  - cron:  '0 10 * * *'
 
 jobs:
   scheduled:
