--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
         type: boolean
         default: true
   schedule:
-  - cron:  '0 11 * * * 2-6'
+  - cron:  '0 11 * * *'
     
 jobs:
   scheduled:
