add comments via utterances

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,10 @@ website:
 #        aria-label: website
 #        href: https://wesslen.netlify.app
 
+comments:
+  utterances:
+    repo: wesslen/bayesian-beagle
+
 format:
   html:
     theme: litera
