--- a/requirements-langchain.txt
+++ b/requirements-langchain.txt
@@ -1,4 +1,4 @@
-langchain==0.1.0
-langchain-openai==0.0.2.post1
+langchain==0.1.12
+langchain-fireworks==0.1.0
 PyMuPDF==1.23.20
 pdfminer.six==20231228
