--- a/requirements-summarizer.txt
+++ b/requirements-summarizer.txt
@@ -1,4 +1,4 @@
-openai==1.6.1
+openai==1.13.3
 strip-tags==0.5.1
 pathlib==1.0.1
 arxiv==2.1.0
@@ -7,3 +7,5 @@ lxml==5.0.0
 ipython==8.18.1
 srsly==2.4.8
 pillow==10.2.0
+tiktoken==0.6.0
+transformers==4.38.2
