Update summarize.yml add

--- a/.github/workflows/summarize.yml
+++ b/.github/workflows/summarize.yml
@@ -1,7 +1,7 @@
 name: Summarize Articles
 
 env:
-    OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+    FIREWORKS_API_KEY: ${{ secrets.FIREWORKS_API_KEY }}
 
 on:
   workflow_dispatch:
