--- a/.github/workflows/summarize.yml
+++ b/.github/workflows/summarize.yml
@@ -12,7 +12,7 @@ on:
         type: boolean
         default: false
   schedule:
-  - cron:  '0 10 * * *'
+  - cron:  '0 10 * * 2'
 
 jobs:
   scheduled:
